--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<script src="assets/js/netsolin.js"></script>
+<!-- <script src="assets/js/netsolin.js"></script> -->
 <!-- <script src="assets/js/epos-2.9.0.js"></script> -->
 
 <html lang="en">
